testcases/good/templates/namespaced-filters-community.j2
# https://github.com/semaphor-dk/dansabel/issues/20

{{ hash_files|zip(query("file","hash_files"))|community.general.dict }}

{{ a | ovirt.ovirt.json_query }}
