testcases/bad/templates/namespaced-filters-community-misspelled-ns1.j2
{{ hash_files|zip(query("file","hash_files"))|communityx.general.dict }}
